--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,22 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Danfo&family=Indie+Flower&family=Jacquard+12&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /* CSS Reset */
-*{margin:0;padding:0;font:inherit;color:inherit;}
+*{margin:0;padding:0;font:inherit;color:inherit;
+font-family: "Indie Flower", sans-serif;
+}
 *, :after, :before {box-sizing:border-box;}
 :root {-webkit-tap-highlight-color:transparent;-webkit-text-size-adjust:100%;text-size-adjust:100%;cursor:default;line-height:1.5;overflow-wrap:break-word;word-break:break-word;tab-size:4}
 html, body {height:100%;}
 img, picture, video, canvas, svg {display: block;max-width:100%;}
-button {background:none;border:0;cursor:pointer;}
+button {background:none;border:0;cursor:pointer;} */
 a {text-decoration:none}
 table {border-collapse:collapse;border-spacing:0}
 th, td {border: solid 1px #000;}
+
+
+
 
 /* 나의 CSS */
 img {
@@ -18,6 +27,49 @@ img {
   height:auto;
 }
 
+#ani3{
+    width:100px;
+    height:100px;
+    /* margin: 0 auto; */
+    position: relative;
+    background-color:black;
+    animation-name:bgchange;
+    animation-duration:5s;
+    /* animation-delay: 2s; */
+  animation-fill-mode: backwards;
+    animation-iteration-count: infinite;
+    animation-play-state:paused;
+    animation-direction: alternate;
+
+  }
+  @keyframes bgchange{
+    0%{
+      background-color:red;
+      left:0%;
+    top:0%;}
+    25%{
+      background-color:orange;
+      left:25%;
+    top:200px;}
+    50%{
+      background-color:yellow;
+      left:50%;}
+    100%{background-color:green;
+      left:80%;
+    top:-200px;}
+
+  }
+  #trans5{
+    width:200px;
+    height:200px;
+    position: relative;
+    background-color: gold;
+  }
+  #trans5:hover{
+    /* transform: translateX(400px); scale:(2, 2); */
+    transform: rotate(30deg);
+    transform-origin: bottom right;
+  }
 #head_title {
   text-align: center;
   font-size: 1.3em;
@@ -27,18 +79,19 @@ img {
 .flex-container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  width: 100%;
+  justify-content: space-evenly;
+  width: 80%;
+  align-items: flex-end;
   height: auto;
   background-color: #c4c4c4;
   border: 1px solid black;
 }
 
 .flex-item {
-  width: auto;
+  width: 150px;
   margin: 5px;
   color: white;
-  background-color: #52aaaa;
+  background-color: #00f815;
 }
 
 .flex-item:nth-child(2n) {
@@ -47,18 +100,28 @@ img {
 
 .grid-container{
   display:grid;
-  grid-template-columns:50% 50%;
+  grid-template-columns:30% 70%;
   grid-template-rows:50% 50%;
-  width: 100%;
+  width: 90%;
   height: auto;
   background-color: #ffc4c4;
-  border: 1px solid black;
+  border: 5px outset black;
+  align-items: start;
+  place-items: start center;
 }
 .grid-item{
   color:white;
+  width: 90%;
   margin: 5px;
-  background-color:#52aaaa;
+  background-color:#08f000;
 }
 .grid-item:nth-child(2n){
   background-color:#5ebfbf;
+}
+.grid-layout{
+  display: grid;
+  grid-template-areas: 
+  "header header header"
+  "sidebar content content"
+  "footer footer "
 }
